# zju_oop_2026

./: .gitignore  CMakeLists.txt  README.md  compile_flags.txt
lab1-student1/: README.md  generate_text.py  main.cpp  test_text.txt
lab2-student2/: README.md  generate_text.py  main.cpp  test_input.txt
lab3-adventure/: main.cpp  test_input_back_forth.txt  test_input_monster_dining.txt  test_input_monster_east_wing.txt  test_input_monster_library.txt  test_input_monster_west_wing.txt
lab3-student2/: compile_flags.txt  main.cpp  test_input.txt  test_input_empty_lines.txt  test_input_full_exploration.txt  test_input_invalid_commands.txt  test_input_princess_wander.txt  test_input_win.txt
lab4-diary/: CMakeLists.txt  README.md  demo.bat  demo.ps1  demo.sh  diary_base.cpp  diary_base.hpp  pdadd.cpp  pdlist.cpp  pdremove.cpp  pdshow.cpp
lab5-fraction/: CMakeLists.txt  README.md  big_int.cpp  big_int.hpp  big_int_bench.cpp  big_int_test.cpp  calculator.cpp  concepts.hpp  fraction.hpp  fraction_bigint_test.cpp  fraction_int128_test.cpp  fraction_test.cpp  int128_test.cpp  utility.hpp
